--- a/monitoring/Makefile
+++ b/monitoring/Makefile
@@ -2,9 +2,9 @@ PROMETHEUS_MANIFEST ?= prometheus.yml
 GRAFANA_MANIFEST ?= grafana.yml
 
 deploy:
-	kubectl apply -f ${PROMETHEUS_MANIFEST}
-	kubectl apply -f ${GRAFANA_MANIFEST}
+	minikube kubectl -- apply -f ${PROMETHEUS_MANIFEST}
+	minikube kubectl -- apply -f ${GRAFANA_MANIFEST}
 
 clean:
-	kubectl delete -f ${PROMETHEUS_MANIFEST}
-	kubectl delete -f ${GRAFANA_MANIFEST}
+	minikube kubectl -- delete -f ${PROMETHEUS_MANIFEST}
+	minikube kubectl -- delete -f ${GRAFANA_MANIFEST}
