--- a/simple-service/Makefile
+++ b/simple-service/Makefile
@@ -3,10 +3,10 @@ TAG ?= v1.0.0
 APP_MANIFEST ?= simple-service.yml
 
 build:
-	docker build -t ${APP_IMAGE_NAME}:${TAG} .
+	minikube image build -t ${APP_IMAGE_NAME}:${TAG} .
 
 deploy:
-	kubectl apply -f ${APP_MANIFEST}
+	minikube kubectl -- apply -f ${APP_MANIFEST}
 
 clean:
-	kubectl delete -f ${APP_MANIFEST}
+	minikube kubectl -- delete -f ${APP_MANIFEST}
